ingress/gitlab-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    name: gitlab
spec:
#  selector:
 #   matchLabels:
  #    name: gitlab
  rules:
  - host: git.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
  - host: git-ssh.example.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: gitlab 
            port:
              number: 1022
